--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.10.16",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/luxon": "^3.6.0",
     "@types/node": "^22.13.2",
     "@types/react": "^19.1.0",
