--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@adonisjs/shield": "^8.1.2",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@ai-sdk/anthropic": "^1.2.6",
     "@dimerapp/markdown": "^8.0.1",
     "@dimerapp/shiki": "^5.0.0",
     "@inertiajs/react": "^2.0.6",
@@ -102,11 +103,13 @@
     "@tailwindcss/vite": "^4.1.1",
     "@tanstack/react-table": "^8.21.2",
     "@vinejs/vine": "^3.0.0",
+    "ai": "^4.3.2",
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "edge.js": "^6.2.1",
+    "gladia": "^0.1.3",
     "he": "^1.2.0",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
